finished styling carousel

--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 
     <div class="frame">
         <div class="carousel">
-            <button>Left</button>
+            <button>Previous</button>
             <div class="carousel-image">
-                <img src="./images/mtg-collectibles.png" alt="">
+                <img class="carousel-image"src="./images/mtg-collectibles.png" alt="mtg">
             </div>
-            <button>Left</button>
+            <button>Next</button>
         </div>
 
         <div class="carousel-selections">
