next and previous buttons working

--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 
     <div class="frame">
         <div class="carousel">
-            <button>Previous</button>
+            <button id="previous">Previous</button>
             <div class="carousel-image">
-                <img class="carousel-image"src="./images/mtg-collectibles.png" alt="mtg">
+               
             </div>
-            <button>Next</button>
+            <button id="next">Next</button>
         </div>
 
         <div class="carousel-selections">
